--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
+    "serve": "^14.2.3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
